--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     function extractImageUrl(fileName) {
       if (!fileName) return null;
       const appName = "E-mall-800546514";
-      return `https://www.appsheet.com/template/gettablefileurl?appName=${appName}&tableName=الإعلانات&fileName=${encodeURIComponent(fileName)}`;
+      return `https://www.appsheet.com/template/gettablefileurl?appName=${appName}&tableName=الاعلانات&fileName=${encodeURIComponent(fileName)}`;
     }
 
     function buildCard(ad) {
