--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html dir="rtl" lang="ar">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>منصة E-Mall 🛍️</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: 'Cairo', sans-serif;
-      background-color: #f9fafb;
+      background: #f9fafb;
       margin: 0;
-      padding: 0;
     }
     header {
       background: #3b82f6;
       color: white;
       padding: 1rem;
-      font-size: 1.4rem;
       text-align: center;
+      font-size: 1.5rem;
     }
     select {
       margin: 1rem;
@@ -32,7 +31,7 @@
     .card {
       background: white;
       border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       overflow: hidden;
       transition: 0.3s;
     }
@@ -44,68 +43,61 @@
     .card-content {
       padding: 1rem;
     }
-    .card-content .title {
-      font-size: 1.1rem;
+    .title {
+      font-size: 1.2rem;
       font-weight: bold;
-      color: #1f2937;
     }
-    .card-content .desc {
-      font-size: 0.95rem;
-      color: #4b5563;
-      margin: 0.5rem 0;
+    .desc {
+      font-size: 1rem;
+      color: #555;
+      margin-top: 0.5rem;
     }
   </style>
 </head>
 <body>
   <header>منصة E-Mall 🛍️</header>
+
   <div style="text-align:center;">
     <label for="filter">فلتر حسب النشاط:</label>
     <select id="filter">
       <option value="">الكل</option>
     </select>
   </div>
+
   <div class="container" id="ads-container">جارٍ التحميل...</div>
 
   <script>
-    const SHEET_URL = "https://docs.google.com/spreadsheets/d/1Xni75nPl7IJRyCN4_DJ1MAmB11ZPT1X0oxsZmCMlxgs/gviz/tq?tqx=out:json&gid=2059461251";
+    const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXS6ck5TQ0s_GDMFXoBk8jtyk0yqm4WG8BifY9rJoT6jONy5yFhhkc4u5QyrcjQxPVSFZ4H2PodFS/gviz/tq?tqx=out:json&sheet=للنشر";
+    const APPSHEET_APP_NAME = "E-mall-800546514";
+    const TABLE_NAME = "الإعلانات";
 
     async function fetchAds() {
       const res = await fetch(SHEET_URL);
       const text = await res.text();
-      const json = JSON.parse(text.substr(47).slice(0, -2));
+      const json = JSON.parse(text.substring(47).slice(0, -2));
+      const cols = json.table.cols.map(c => c.label);
       const data = json.table.rows.map(r => r.c.map(c => c ? c.v : ""));
-      const headers = json.table.cols.map(c => c.label);
-      const ads = data.map(row => Object.fromEntries(row.map((v, i) => [headers[i], v])));
-      return ads;
+      return data.map(row => Object.fromEntries(row.map((val, i) => [cols[i], val])));
     }
 
-    function extractImageUrl(fileName) {
+    function getAppSheetImageUrl(fileName) {
       if (!fileName) return null;
-      const appName = "E-mall-800546514";
-      return `https://www.appsheet.com/template/gettablefileurl?appName=${appName}&tableName=الاعلانات&fileName=${encodeURIComponent(fileName)}`;
+      return `https://www.appsheet.com/template/gettablefileurl?appName=${APPSHEET_APP_NAME}&tableName=${encodeURIComponent(TABLE_NAME)}&fileName=${encodeURIComponent(fileName)}`;
     }
 
     function buildCard(ad) {
       const container = document.createElement("div");
       container.className = "card";
 
-      const mainImage = extractImageUrl(ad["صورة"]) || "https://via.placeholder.com/300x180?text=No+Image";
-      const title = ad["عنوان العرض"] || "بدون عنوان";
-      const desc = ad["وصف"] || "لا يوجد وصف";
-
-      const images = [];
-      for (let i = 2; i <= 8; i++) {
-        const imageField = ad["صورة" + i];
-        if (imageField) images.push(extractImageUrl(imageField));
-      }
-
-      const imageHtml = [mainImage, ...images].filter(Boolean).map(url => `<img src="${url}" alt="صورة">`).join("");
+      const imageFields = ["صورة", "صورة2", "صورة3", "صورة4", "صورة5", "صورة6", "صورة7", "صورة8"];
+      const allImages = imageFields.map(f => getAppSheetImageUrl(ad[f])).filter(Boolean);
+      const imagesHtml = allImages.map(url => `<img src="${url}" alt="صورة">`).join("");
 
       container.innerHTML = `
-        ${imageHtml}
+        ${imagesHtml || '<img src="https://via.placeholder.com/300x180?text=No+Image" alt="بدون صورة">'}
         <div class="card-content">
-          <div class="title">${title}</div>
-          <div class="desc">${desc}</div>
+          <div class="title">${ad["عنوان العرض"] || "بدون عنوان"}</div>
+          <div class="desc">${ad["وصف"] || "لا يوجد وصف"}</div>
         </div>
       `;
       return container;
@@ -116,26 +108,23 @@
       const container = document.getElementById("ads-container");
       const select = document.getElementById("filter");
 
-      const activitySet = new Set();
-      ads.forEach(ad => {
-        if (ad["نوع النشاط"]) activitySet.add(ad["نوع النشاط"]);
+      const النشاطات = Array.from(new Set(ads.map(ad => ad["نوع النشاط"]).filter(Boolean)));
+      النشاطات.forEach(n => {
+        const option = document.createElement("option");
+        option.value = n;
+        option.textContent = n;
+        select.appendChild(option);
       });
 
-      activitySet.forEach(act => {
-        const opt = document.createElement("option");
-        opt.value = act;
-        opt.textContent = act;
-        select.appendChild(opt);
-      });
-
-      function showFilteredAds(value) {
+      function showAds(filter = "") {
         container.innerHTML = "";
-        ads.filter(ad => !value || ad["نوع النشاط"] === value)
-            .forEach(ad => container.appendChild(buildCard(ad)));
+        ads
+          .filter(ad => !filter || ad["نوع النشاط"] === filter)
+          .forEach(ad => container.appendChild(buildCard(ad)));
       }
 
-      select.addEventListener("change", () => showFilteredAds(select.value));
-      showFilteredAds("");
+      select.addEventListener("change", () => showAds(select.value));
+      showAds("");
     }
 
     renderAds();
