--- a/index.html
+++ b/index.html
@@ -3,104 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <title>منصة E-Mall 🛍️</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-      font-family: 'Cairo', sans-serif;
-      background: #f9fafb;
-      margin: 0;
-    }
-    header {
-      background: #3b82f6;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.5rem;
-    }
-    select {
-      margin: 1rem;
-      padding: 0.5rem;
-      font-size: 1rem;
-    }
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1rem;
-      padding: 1rem;
-    }
-    .card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      overflow: hidden;
-      transition: 0.3s;
-    }
-    .card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
-    .card-content {
-      padding: 1rem;
-    }
-    .title {
-      font-size: 1.2rem;
-      font-weight: bold;
-    }
-    .desc {
-      font-size: 1rem;
-      color: #555;
-      margin-top: 0.5rem;
-    }
+    body { font-family: 'Cairo', sans-serif; background-color: #f9fafb; margin: 0; padding: 0; }
+    header { background: #3b82f6; color: white; padding: 1rem; text-align: center; font-size: 1.4rem; }
+    select { margin: 1rem; padding: 0.5rem; font-size: 1rem; }
+    .container { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1rem; padding: 1rem; }
+    .card { background: white; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); overflow: hidden; }
+    .card img { width: 100%; height: 180px; object-fit: cover; }
+    .card-content { padding: 1rem; }
+    .card-content .title { font-size: 1.1rem; font-weight: bold; color: #1f2937; }
+    .card-content .desc { font-size: 0.95rem; color: #4b5563; margin-top: 0.5rem; }
   </style>
 </head>
 <body>
   <header>منصة E-Mall 🛍️</header>
-
   <div style="text-align:center;">
-    <label for="filter">فلتر حسب النشاط:</label>
-    <select id="filter">
-      <option value="">الكل</option>
-    </select>
+    <label>فلتر حسب النشاط:</label>
+    <select id="filter"><option value="">الكل</option></select>
   </div>
-
   <div class="container" id="ads-container">جارٍ التحميل...</div>
 
   <script>
-    const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXS6ck5TQ0s_GDMFXoBk8jtyk0yqm4WG8BifY9rJoT6jONy5yFhhkc4u5QyrcjQxPVSFZ4H2PodFS/gviz/tq?tqx=out:json&sheet=الاعلانات";
+    const SHEET_TSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXS6ck5TQ0s_GDMFXoBk8jtyk0yqm4WG8BifY9rJoT6jONy5yFhhkc4u5QyrcjQxPVSFZ4H2PodFS/pub?gid=2059461251&single=true&output=tsv";
     const APPSHEET_APP_NAME = "E-mall-800546514";
-    const TABLE_NAME = "الإعلانات";
 
     async function fetchAds() {
-      const res = await fetch(SHEET_URL);
+      const res = await fetch(SHEET_TSV_URL);
       const text = await res.text();
-      const json = JSON.parse(text.substring(47).slice(0, -2));
-      const cols = json.table.cols.map(c => c.label);
-      const data = json.table.rows.map(r => r.c.map(c => c ? c.v : ""));
-      return data.map(row => Object.fromEntries(row.map((val, i) => [cols[i], val])));
+      const rows = text.trim().split('\n').map(r => r.split('\t'));
+      const headers = rows[0];
+      return rows.slice(1).map(row =>
+        Object.fromEntries(row.map((v, i) => [headers[i], v]))
+      );
     }
 
-    function getAppSheetImageUrl(fileName) {
-      if (!fileName) return null;
-      return `https://www.appsheet.com/template/gettablefileurl?appName=${APPSHEET_APP_NAME}&tableName=${encodeURIComponent(TABLE_NAME)}&fileName=${encodeURIComponent(fileName)}`;
+    function extractAppSheetImage(fileName) {
+      return fileName && fileName.includes("Images/")
+        ? `https://www.appsheet.com/template/gettablefileurl?appName=${APPSHEET_APP_NAME}&tableName=الإعلانات&fileName=${encodeURIComponent(fileName)}`
+        : null;
     }
 
     function buildCard(ad) {
-      const container = document.createElement("div");
-      container.className = "card";
+      const card = document.createElement("div");
+      card.className = "card";
 
-      const imageFields = ["صورة", "صورة2", "صورة3", "صورة4", "صورة5", "صورة6", "صورة7", "صورة8"];
-      const allImages = imageFields.map(f => getAppSheetImageUrl(ad[f])).filter(Boolean);
-      const imagesHtml = allImages.map(url => `<img src="${url}" alt="صورة">`).join("");
+      const images = [ad["صورة"]];
+      for (let i = 2; i <= 8; i++) {
+        const key = `صورة${i}`;
+        if (ad[key]) images.push(ad[key]);
+      }
 
-      container.innerHTML = `
-        ${imagesHtml || '<img src="https://via.placeholder.com/300x180?text=No+Image" alt="بدون صورة">'}
+      const imageHtml = images.map(file => {
+        const url = extractAppSheetImage(file);
+        return url ? `<img src="${url}" alt="صورة">` : "";
+      }).join("");
+
+      card.innerHTML = `
+        ${imageHtml}
         <div class="card-content">
           <div class="title">${ad["عنوان العرض"] || "بدون عنوان"}</div>
           <div class="desc">${ad["وصف"] || "لا يوجد وصف"}</div>
         </div>
       `;
-      return container;
+      return card;
     }
 
     async function renderAds() {
@@ -108,23 +73,23 @@
       const container = document.getElementById("ads-container");
       const select = document.getElementById("filter");
 
-      const النشاطات = Array.from(new Set(ads.map(ad => ad["نوع النشاط"]).filter(Boolean)));
-      النشاطات.forEach(n => {
-        const option = document.createElement("option");
-        option.value = n;
-        option.textContent = n;
-        select.appendChild(option);
+      const kinds = new Set();
+      ads.forEach(ad => ad["نوع النشاط"] && kinds.add(ad["نوع النشاط"]));
+      kinds.forEach(kind => {
+        const opt = document.createElement("option");
+        opt.value = kind;
+        opt.textContent = kind;
+        select.appendChild(opt);
       });
 
-      function showAds(filter = "") {
+      function showFiltered(kind) {
         container.innerHTML = "";
-        ads
-          .filter(ad => !filter || ad["نوع النشاط"] === filter)
-          .forEach(ad => container.appendChild(buildCard(ad)));
+        ads.filter(ad => !kind || ad["نوع النشاط"] === kind)
+            .forEach(ad => container.appendChild(buildCard(ad)));
       }
 
-      select.addEventListener("change", () => showAds(select.value));
-      showAds("");
+      select.addEventListener("change", () => showFiltered(select.value));
+      showFiltered("");
     }
 
     renderAds();
