--- a/ads.html
+++ b/ads.html
@@ -45,42 +45,49 @@
   <h2 style="text-align:center;">إعلانات المكان</h2>
   <div class="ads-grid"></div>
 
-  <script>
-    async function loadAds() {
-      try {
-        const params = new URLSearchParams(window.location.search);
-        const placeId = params.get("place");
-        console.log("Place ID:", placeId);
+ <script>
+async function loadAds() {
+  try {
+    const params = new URLSearchParams(window.location.search);
+    const placeId = params.get("place");
+    console.log("Place ID:", placeId);
 
-        const response = await fetch("https://script.google.com/macros/s/AKfycbxkKrHyeEAgSkLz2QHzSgA5w09dIvfFJgDUMkP373f-VVAZmahHalr0GOYojqK41x6E/exec");
-        const data = await response.json();
+    const response = await fetch("https://script.google.com/macros/s/AKfycbxkKrHyeEAgSkLz2QHzSgA5w09dIvfFJgDUMkP373f-VVAZmahHalr0GOYojqK41x6E/exec");
+    const data = await response.json();
 
-        console.log("Fetched Data:", data);
+    console.log("Fetched Data:", data);
 
-        const adsContainer = document.querySelector(".ads-grid");
-        const ads = data.ads.filter(ad => ad["معرف المكان"] === placeId);
-        if (ads.length === 0) {
-          adsContainer.outerHTML = `<div class="no-ads">لا توجد إعلانات نشطة لهذا المكان</div>`;
-          return;
-        }
+    const adsContainer = document.querySelector(".ads-grid");
 
-        ads.forEach(ad => {
-          const card = document.createElement("div");
-          card.className = "ad-card";
-          card.innerHTML = `
-            <img src="${ad['رابط الصورة'] || 'https://via.placeholder.com/180'}" alt="إعلان">
-            <h4>${ad['عنوان العرض'] || 'إعلان بدون عنوان'}</h4>
-            ${ad['رابط يوتيوب'] ? `<a href="${ad['رابط يوتيوب']}" target="_blank">مشاهدة الفيديو</a>` : ""}
-          `;
-          adsContainer.appendChild(card);
-        });
-      } catch (error) {
-        console.error("Error loading ads:", error);
-        document.querySelector(".ads-grid").outerHTML = `<div class="no-ads">حدث خطأ في تحميل الإعلانات</div>`;
-      }
+    // ✅ فلترة الإعلانات حسب المكان والحالة
+    const ads = data.ads.filter(ad =>
+      ad["معرف المكان"].trim() === placeId.trim() && ad["حالة الاعلان"].trim() === "نشط"
+    );
+
+    console.log("Filtered Ads:", ads);
+
+    if (ads.length === 0) {
+      adsContainer.outerHTML = `<div class="no-ads">لا توجد إعلانات نشطة لهذا المكان</div>`;
+      return;
     }
 
-    loadAds();
-  </script>
+    ads.forEach(ad => {
+      const card = document.createElement("div");
+      card.className = "ad-card";
+      card.innerHTML = `
+        <img src="${ad['رابط الصورة'] || 'https://via.placeholder.com/180'}" alt="إعلان">
+        <h4>${ad['عنوان العرض'] || 'إعلان بدون عنوان'}</h4>
+        ${ad['رابط يوتيوب'] ? `<a href="${ad['رابط يوتيوب']}" target="_blank">مشاهدة الفيديو</a>` : ""}
+      `;
+      adsContainer.appendChild(card);
+    });
+  } catch (error) {
+    console.error("Error loading ads:", error);
+    document.querySelector(".ads-grid").outerHTML = `<div class="no-ads">حدث خطأ في تحميل الإعلانات</div>`;
+  }
+}
+
+loadAds();
+</script>
 </body>
 </html>
