--- a/ads.html
+++ b/ads.html
@@ -42,8 +42,9 @@
   </style>
 </head>
 <body>
+  <body>
   <h2 style="text-align:center;">إعلانات المكان</h2>
-  <div class="ads-grid"></div>
+  <div class="ads-grid" style="display:grid;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));gap:12px;margin:15px;"></div>
 
  <script>
 async function loadAds() {
