--- a/ads.html
+++ b/ads.html
@@ -45,6 +45,7 @@
   <body>
   <h2 style="text-align:center;">إعلانات المكان</h2>
   <div class="ads-grid" style="display:grid;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));gap:12px;margin:15px;"></div>
+</body>
 
  <script>
 async function loadAds() {
