--- a/ads.html
+++ b/ads.html
@@ -174,9 +174,8 @@ loadAds();
 </script>
 </body>
 </html>
- -->
 
-<!DOCTYPE html>
+///////////////////////////////////////////////////
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
@@ -211,7 +210,7 @@ loadAds();
   <h2>إعلانات المكان</h2>
   <div class="ads-container" id="ads-container"></div>
 
-  <!-- نافذة تكبير الصورة -->
+ 
   <div id="imgModal" class="modal">
     <img id="modalImg">
   </div>
@@ -294,5 +293,166 @@ loadAds();
       return `<a href="${videoUrl}" target="_blank" class="btn">شاهد الفيديو</a>`;
     }
   </script>
+</body>
+</html>
+ -->
+
+
+
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>إعلانات المكان</title>
+<style>
+  body {
+    font-family: 'Cairo', sans-serif;
+    background: #f8f8f8;
+    margin: 0;
+    padding: 15px;
+  }
+  h2 { text-align: center; margin-bottom: 15px; }
+  .ads-container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  .ad-card {
+    background: #fff;
+    padding: 12px;
+    border-radius: 12px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  }
+  .ad-card h3 { margin: 5px 0; font-size: 16px; }
+  .ad-card p { margin: 5px 0; color: #555; font-size: 14px; }
+  .images-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-top: 10px;
+  }
+  .images-gallery img {
+    width: 90px;
+    height: 90px;
+    object-fit: cover;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+  }
+  .images-gallery img:hover { transform: scale(1.05); }
+
+  /* Lightbox */
+  .lightbox {
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  .lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 12px;
+  }
+  .lightbox.active { display: flex; }
+</style>
+</head>
+<body>
+<h2>إعلانات المكان</h2>
+<div class="ads-container" id="adsContainer"></div>
+
+<!-- Lightbox -->
+<div class="lightbox" id="lightbox">
+  <img id="lightboxImg" src="">
+</div>
+
+<script>
+const params = new URLSearchParams(window.location.search);
+const placeId = params.get("place");
+const API_URL = "https://script.google.com/macros/s/AKfycbxkKrHyeEAgSkLz2QHzSgA5w09dIvfFJgDUMkP373f-VVAZmahHalr0GOYojqK41x6E/exec";
+
+fetch(API_URL)
+  .then(res => res.json())
+  .then(data => {
+    const ads = data.ads.filter(ad => ad["معرف المكان"] === placeId && ad["حالة الاعلان"] === "نشط");
+    renderAds(ads);
+  })
+  .catch(err => console.error("Error fetching ads:", err));
+
+function renderAds(ads) {
+  const container = document.getElementById("adsContainer");
+  container.innerHTML = "";
+
+  if (ads.length === 0) {
+    container.innerHTML = "<p style='text-align:center;'>لا توجد إعلانات نشطة لهذا المكان.</p>";
+    return;
+  }
+
+  ads.forEach(ad => {
+    const card = document.createElement("div");
+    card.className = "ad-card";
+
+    // صور الإعلان
+    const images = [];
+    if (ad["رابط الصورة"]) images.push(ad["رابط الصورة"]);
+    if (ad["رابط صورة2"]) images.push(ad["رابط صورة2"]);
+    if (ad["رابط صورة3"]) images.push(ad["رابط صورة3"]);
+    if (ad["رابط صورة4"]) images.push(ad["رابط صورة4"]);
+    if (ad["رابط صورة5"]) images.push(ad["رابط صورة5"]);
+    if (ad["رابط صورة6"]) images.push(ad["رابط صورة6"]);
+    if (ad["رابط صورة7"]) images.push(ad["رابط صورة7"]);
+    if (ad["رابط صورة8"]) images.push(ad["رابط صورة8"]);
+
+    const imagesHTML = images.map(url => `<img src="${url}" onclick="openLightbox('${url}')">`).join("");
+
+    card.innerHTML = `
+      <h3>${ad["عنوان العرض"] || "إعلان"}</h3>
+      <p>${ad["وصف"] || ""}</p>
+      ${images.length > 0 ? `<div class="images-gallery">${imagesHTML}</div>` : ""}
+      ${ad["رابط الفيديو"] ? renderVideo(ad["رابط الفيديو"]) : ""}
+      ${ad["رابط يوتيوب"] ? renderVideo(ad["رابط يوتيوب"]) : ""}
+    `;
+
+    container.appendChild(card);
+  });
+}
+
+// عرض الفيديوهات
+function renderVideo(videoUrl) {
+  if (!videoUrl) return "";
+
+  if (videoUrl.includes("youtube.com") || videoUrl.includes("youtu.be")) {
+    return `<iframe width="100%" height="220" src="${videoUrl.replace("watch?v=", "embed/")}" frameborder="0" allowfullscreen></iframe>`;
+  }
+
+  if (videoUrl.includes("drive.google.com")) {
+    return `<iframe width="100%" height="220" src="${videoUrl}" frameborder="0" allowfullscreen></iframe>`;
+  }
+
+  if (videoUrl.includes("tiktok.com")) {
+    return `
+      <blockquote class="tiktok-embed" cite="${videoUrl}" style="max-width: 300px;min-width: 150px;">
+        <a href="${videoUrl}">مشاهدة على تيك توك</a>
+      </blockquote>
+      <script async src="https://www.tiktok.com/embed.js"></script>
+    `;
+  }
+
+  return `<a href="${videoUrl}" target="_blank" style="display:inline-block;padding:8px 12px;background:#2196f3;color:white;border-radius:6px;text-decoration:none;">مشاهدة الفيديو</a>`;
+}
+
+// Lightbox
+function openLightbox(url) {
+  document.getElementById("lightboxImg").src = url;
+  document.getElementById("lightbox").classList.add("active");
+}
+document.getElementById("lightbox").onclick = () => {
+  document.getElementById("lightbox").classList.remove("active");
+};
+</script>
 </body>
 </html>
