--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
                         <i class="fas fa-save"></i>
                         حفظ بيانات المكان
                     </button>
-                    <button type="button" id="goPackagesBtn" class="btn" style="margin-right: 10px;">
+                    <button type="button" id="goPackagesBtn" class="btn" onclick="showTab('packages')" style="margin-right: 10px;">
                         <i class="fas fa-box"></i>
                         انتقل إلى الباقات
                     </button>
